--- a/stylesheet.css
+++ b/stylesheet.css
@@ -24,6 +24,11 @@ div {
 	position: relative;
 	margin-left: 10px;
 }
+#p4 {
+	display: inline;
+	position: relative;
+	margin-left: 45%;
+}
 
 #div {
 	display: inline;
