--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,24 +2,25 @@ div {
 	text-align: center;
 }
 
-table {
-	style="width:50%";
-
+#pt {
+	margin-left: 24%;
+	width:40%;
 }
 
 #p1 {
-	display: inline;
-	position: relative;
-	margin-left: 25%;
+	
+	
+	margin-left: 20%;
 }
 
 #p2 {
 	display: inline;
 	position: relative;
-	margin-left: 10%;
+	margin-left: 11%;
 }
 
 #p3 {
+	text-align: center;
 	display: inline;
 	position: relative;
 	margin-left: 10px;
@@ -42,6 +43,16 @@ table {
 	margin-left: 160px;
 	font-size: 100%;
 }
+#p7{	display: inline;
+	position: relative;
+	margin-left: 24%;
+}
+#p8{
+	width:30%;
+	margin-left: 30px;
+text-align: justify;
+}
+
 #div {
 	display: inline;
 	position: relative;
@@ -71,6 +82,10 @@ table {
 	width: 50px;
 	position: relative;
 	margin-left: 93px;
+            background: url(background20.jpg) 
+}
+body {
+	background: url(background20.jpg) 
 }
 
 .space {
