--- a/stylesheet.css
+++ b/stylesheet.css
@@ -85,7 +85,7 @@ text-align: justify;
            }
            
         html{
-        	background-image: url(background20.jpg);
+        	background-image: 
         	background-repeat: no-repeat;
         	background-attachment: fixed;
         	background-size: 100%
